add exceptions + clean the code